--- a/input.css
+++ b/input.css
@@ -6,3 +6,7 @@
   filter: invert(80%) sepia(37%) saturate(7048%) hue-rotate(132deg)
     brightness(105%) contrast(104%);
 }
+
+.dark .dark\:bg-curvy-dark-mode {
+  background-image: url('../images/bg-curvy-dark-mode.svg');
+}
